--- a/function.scss
+++ b/function.scss
@@ -1,6 +1,6 @@
 /*** the usage:
-* In a full responsive website you have to calculate the height of an element.
-* You know that this element is 640*800 at a viewport of 1024px.
+* In a full responsive website you have to find the height of an element.
+* You know that the element is 640*800 at a viewport width of 1024px.
 ***/
 
 .myElement {
