--- a/function.scss
+++ b/function.scss
@@ -8,6 +8,7 @@
 }
 
 /**
+* Get Ratio By Viewport 
 * $elW: element width at some viewport
 * $elH: element height at some viewport
 * $viewportW: the viewport width
